# trabalho1ed

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
contextualizacao/: index.html
data/iceberg_warehouse/baseball/statcast_arremessadores/data/: .00000-10-caf389b6-5ba0-4bfb-b3d4-036f12e95cbb-0-00001.parquet.crc  .00000-2-b2339dd2-d165-4841-b57c-da95bc2e4bc6-0-00001.parquet.crc  (+4 more)
data/raw/: statcast_data.csv
data/tabela_vendas_delta/: .part-00000-997738e3-42e2-49b6-b550-b2eb5e6d5a2a-c000.snappy.parquet.crc  .part-00000-9ddddbed-fc28-4aab-99bf-8543e249a7f3-c000.snappy.parquet.crc  .part-00007-2dd12015-0d61-4983-87fd-dd9f868a5203-c000.snappy.parquet.crc  .part-00015-c898c107-4e38-437d-b70b-c81283458db4-c000.snappy.parquet.crc  part-00000-1906d6c0-414f-4438-9839-b0192c5ed540-c000.snappy.parquet  part-00000-9ddddbed-fc28-4aab-99bf-8543e249a7f3-c000.snappy.parquet  part-00007-2dd12015-0d61-4983-87fd-dd9f868a5203-c000.snappy.parquet  part-00015-c898c107-4e38-437d-b70b-c81283458db4-c000.snappy.parquet
data/tabela_vendas_delta/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc
delta/: index.html
docs/: contextualizacao.md  delta.md  exemplos_codigo.md  iceberg.md  index.md  modelagem_e_testes.md  spark.md
exemplos_codigo/: index.html
iceberg/: index.html
modelagem_e_testes/: index.html
notebooks/: delta-lake.ipynb  iceberg.ipynb  modelagem-er-ddl.ipynb
search/: search_index.json
spark/: index.html
src/: ingestao.py
(+28 files in other folders)
