[project]
name = "trabalho1ed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "delta-spark==3.2.0",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "mkdocs-material>=9.7.6",
    "pyspark==3.5.3",
    "taskipy>=1.14.1",
]
